# vkeyes-demo-rs

./: Cargo.toml  LICENSE  README.md  test  vulkaninfo.html
assets/: scene.mtl
src/: application.rs  main.rs  old_main.rs  openvr_vulkan.rs
src/models/: mod.rs
src/renderer/: eye.rs  mod.rs  model.rs
src/shaders/: frag.glsl  mod.rs  vert.glsl
