[package]
name = "project39-ar"
version = "0.1.0"
authors = ["Fun Maker <funmaker95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.18.0"
vulkano-shaders = "0.18.0"
image = "0.23"
openvr = "0.6.0"
cgmath = "0.17.0"
