[package]
name = "vkeyes-demo-rs"
version = "0.1.0"
authors = ["Fun Maker <funmaker95@gmail.com>"]
edition = "2018"

[dependencies]
vulkano = "0.18.0"
vulkano-shaders = "0.18.0"
image = "0.23"
openvr = "0.6.0"
cgmath = "0.17.0"
err-derive = "0.2.3"
getopts = "0.2.21"
arc-swap = "0.4.5"
obj-rs = "0.6.0"
